@@ -1,3 +1,7 @@
+2013-01-14  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	Update copyright years.
+
 2013-01-01  Ian Lance Taylor  <iant@google.com>
 
 	PR bootstrap/54834
